<?xml version="1.0"?>
<package>
  <name>microstrain_3dm_gx3_45</name>
  <version>0.0.1</version>
  <description>Package to publish messages from Microstrain 3DM-GX3-45 INS</description>

  <maintainer email="a7med.saber@gmail.com">Ahmed Saber</maintainer>


  <license>BSD</license>


  <url type="website">http://wiki.ros.org/microstrain_3dm_gx3_45</url>


  <author email="a7med.saber@gmail.com">Ahmed Saber</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>


  <export>
  </export>
</package>